--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
-    "@okta/oidc-middleware": "^0.1.3",
-    "@okta/okta-sdk-nodejs": "^1.1.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -16,6 +14,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.16",
     "morgan": "~1.9.0",
+    "passport-facebook": "^2.1.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
