--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.16",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
