--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-session": "^1.0.2",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
